Fixed issues with layout on mobile site

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,8 @@
 
 body {
   padding-top: 80px;
+  padding-right: 10px;
+  padding-left: 10px;
   background-color: #2E2E2E;
   color: white;
 }
@@ -15,10 +17,13 @@ body a:hover {
   color: white;
 }
 
-.fluid-container {
-  padding-left: 250px;
-  padding-right: 250px;
-}
+@media (min-width: 1200px) {
+  .fluid-container {
+    padding-left: 250px;
+    padding-right: 250px;
+  }
+ }
+
 
 .footer {
   text-align: center;
